# learning-to-route

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: harness.py  tasks.jsonl
experiments/: README.md  log.deepseek-v4-flash.txt  log.gemini-3.5-flash.txt  log.gpt-5.4-mini.txt  log.gpt-5.4-nano.txt  log.gpt-5.5.txt  report.json  results.sample.jsonl  router.trained.json
hf/: README.md
inference/go/: route_gobed.go
inference/python/: route_pybed.py
ltr/: __init__.py  embed.py  frontier.py  route.py  router.py  train.py
paper/: learning-to-route.md
scripts/: experiments.py  report.py
tests/: test_router.py
