[project]
name = "learning-to-route"
version = "0.1.0"
description = "Learn to route coding tasks to the cheapest capable LLM with static embedding models"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lee Penkman" }]
dependencies = ["numpy>=1.24", "httpx>=0.27"]

[project.optional-dependencies]
pybed = ["pybed @ git+https://github.com/lee101/pybed"]
st = ["sentence-transformers>=3.3"]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ltr"]
